infra/base/opa-gatekeeper/constraints/constraint-required-labels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-standard-labels
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - monitoring
      - ingress-nginx
      - kubernetes-dashboard
      - auth
  parameters:
    labels:
      - "app.kubernetes.io/name"
