infra/base/opa-gatekeeper/constraints/constraint-required-resources.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: require-resource-limits
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - monitoring
      - ingress-nginx
      - kubernetes-dashboard
      - auth
  parameters:
    requiredFields:
      - "limits"
      - "requests"
