infra/base/opa-gatekeeper/constraints/template-no-privileged.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8snoprivilegedcontainers
  annotations:
    description: "Deny containers running in privileged mode"
spec:
  crd:
    spec:
      names:
        kind: K8sNoPrivilegedContainers
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snoprivilegedcontainers

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.privileged == true
          msg := sprintf("Container '%v' in Pod '%v' is running in privileged mode, which is not allowed", [container.name, input.review.object.metadata.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.initContainers[_]
          container.securityContext.privileged == true
          msg := sprintf("Init container '%v' in Pod '%v' is running in privileged mode, which is not allowed", [container.name, input.review.object.metadata.name])
        }
